# HOG_Project

./: CMakeLists.txt  Dockerfile  README.md  build_container.sh
include/: HogCUDA.h  HogDetector.h  HogOpenCL.h  HogOpenMP.h  HogSequential.h  Utils.h
results/: CUDA.csv  OpenCL.csv  OpenMP.csv  Sequential.csv  analyze.py
src/: Utils.cpp  main.cpp
src/cuda/: HogCUDA.cu
src/opencl/: HogOpenCL.cpp
src/openmp/: HogOpenMP.cpp
src/sequential/: HogSequential.cpp
